trunk/app/webroot/css/style.css
/* ... */
*/
	
	/* div.wrapper div.actions ul ul.filter li:hover div.filter_menu { */
	
	div.wrapper div.actions ul ul.filter li div.filter_menu {
		
		display: none;
		position: absolute;
		
		width: 200px;
		bottom: 36px;
		left: -130px;
		
		margin: 0;
		padding: 15px 2px;
		border: 0;
		
		/* overflow: hidden; */
		line-height: 14px;
		background: #374d61;
		text-align: left;
		
		-moz-border-radius: 10px;
		-webkit-border-radius: 10px;
	}
		
		div.wrapper div.actions ul ul.filter li div.filter_menu.scroll {
			padding: 4px 2px;
		}
	
		div.wrapper div.actions ul ul.filter li div.filter_menu span.arrow {
			position: absolute;
			right: 30px;
			bottom: -13px;
			width: 16px;
			height: 13px;
			background: url("../img/filter-arrow-down.png") center center no-repeat;
		}
	
	div.wrapper div.actions ul ul.filter li:hover span,
	div.wrapper div.actions ul ul.filter li:hover span a {
		color: #fff;
	}
	
	div.wrapper div.actions ul ul.filter div.filter_menu div {
		-moz-border-radius: 0; -webkit-border-radius: 0;
		background: #486680;
		
		overflow: hidden;
		border: none;
		padding: 0;
		margin: 0;
		
		max-height: 197px;
		width: 200px;
		
		position: relative;
	}
	
	div.wrapper div.actions ul ul.filter div.filter_menu div ul {
		-moz-border-radius: 0; -webkit-border-radius: 0;
		background: #486680;
	}
	
		div.wrapper div.actions ul ul.filter div.filter_menu.scroll div {
			height: 197px;
		}
		
		div.wrapper div.actions ul ul.filter div.filter_menu.scroll div ul {
			top: 0;
			padding: 11px 0;
			position: relative;
		}
		
		div.wrapper div.actions ul ul.filter div.filter_menu span.up {
			position: absolute;
			display: block;
			
			top: 4px;
			left: 2px;
			
			background: rgba(55,77,97,0.8);
			width: 201px;
			height: 15px;
		}
	
		div.wrapper div.actions ul ul.filter div.filter_menu span.down {
			position: absolute;
			display: block;
			
			bottom: 4px;
			left: 2px;
			
			background: rgba(55,77,97,0.8);
			width: 201px;
			height: 15px;
		}
		
		div.wrapper div.actions ul ul.filter div.filter_menu a.up {
			position: absolute;
			display: block;
			
			padding: 3px 0;
			margin: 0;
			
			top: 0px;
			left: 10px;
			width: 185px;
			height: 12px;
			
			color: #ccc;
			text-align: center;
		}
	
		div.wrapper div.actions ul ul.filter div.filter_menu a.down {
			position: absolute;
			display: block;
			
			padding: 0;
			margin: 0;
			
			bottom: 0px;
			left: 10px;
			width: 185px;
			height: 18px;
			
			color: #ccc;
			text-align: center;
		}
	
	div.wrapper div.actions ul ul.filter div.filter_menu div ul li {
		width: 200px;
		padding: 0;
		margin: 0;
		
/*
		padding-left: 10px;
		padding-right: 10px;
		w\idth: 180px;
*/

		border: 0;
		border-top: 1px dotted #374d61;
		/*border-bottom: 1px solid #486680; */
		background: none;
		color: #999;
		/* background-image: url("../img/btnBack.png"); */
	}
	
	div.wrapper div.actions ul ul.filter div.filter_menu div ul li a {
		color: #fff;
		display: none;
		-moz-border-radius: 0; -webkit-border-radius: 0;
	}

	div.wrapper div.actions ul ul.filter div.filter_menu div ul li.count_0 {
		border-top: 1px solid #374d61;
		margin: 0;
		-moz-border-radius-topleft: 5px; -webkit-border-top-left-radius: 5px;
	}
	div.wrapper div.actions ul ul.filter div.filter_menu div ul li.count_last_line {
		margin: 0;
		-moz-border-radius-bottomleft: 5px; -webkit-border-bottom-left-radius: 5px;
		-moz-border-radius-bottomright: 5px; -webkit-border-bottom-right-radius: 5px;
	}

		div.wrapper div.actions ul ul.filter div.filter_menu div ul li:hover,
		div.wrapper div.actions ul ul.filter div.filter_menu div ul li.count_0:hover {
			/* background-image: url("../img/btnBackSel.png"); */
			
			/*
			border-top: 1px dotted #ccc;
			border-bottom: 1px dotted #ccc;
			*/
		}

	div.wrapper div.actions ul ul.filter div.filter_menu div ul li a {
		background-color: #486680;
		line-height: 19px;
		float: none;
		display: block;
		text-transform: none;
		font-weight: normal;
		font-size: 11px;
		cursor: pointer;
	}
	
	div.wrapper div.actions ul ul.filter div.filter_menu div ul li a:hover {
		background-color: #283b4a;
		color: #fff;
	}
	
	div.wrapper div.actions ul ul.filter ul li a.not_allowed {
		color: #999;
		cursor: not-allowed;
	}

/*===========================================================*
	-=header menu/user 
*===========================================================*/
ul#root_menu_for_header,
ul#main_menu_for_header {
	position: absolute;
	right: 15px;
	padding: 0; 
	margin: 0;
	list-style: none;
	border: none;
}

/*===========================================================*
	-=position for toolbox rows 
*===========================================================*/
ul#root_menu_for_header { top: 0; }
ul#main_menu_for_header { top: 45px; }

/*===========================================================*
	-=paired / shared selectors for toolbox 
*===========================================================*/
ul#root_menu_for_header li,
ul#root_menu_for_header li a,
ul#main_menu_for_header li,
ul#main_menu_for_header li a {
	display: block; 
	float: left;
	width: 40px;
	height: 40px;
	margin-right: 5px;
	text-indent: -10000px;
	text-decoration: none;
}

#root_menu_for_header li:hover{
	background-image: url("../img/icons/toolbox_top_bk01.png");
} 

#main_menu_for_header li:hover{
	background-image: url("../img/icons/toolbox_bot_bk01.png");
} 

ul#root_menu_for_header li.not_allowed,
ul#main_menu_for_header li.not_allowed {
	color: #aaa;
}


/* others here */		
p#user_for_header {
	position: absolute;
	
	top: 20px; right: 0;
	padding: 0; 
	margin: 0 30px 0 0;
	
	font-size: 14px;
	/* font-weight: bold; */
	color: #fff;
}

p#user_for_header span {
	font-size: 11px;
	font-weight: normal;
	color: #ccc;
}
/* ... */

